massive changes to forms and view.

--- a/realestate_app/templates/realestate_app/closings.html
+++ b/realestate_app/templates/realestate_app/closings.html
@@ -2,14 +2,14 @@
 
 <!--   Closings.html  -->
 
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    {% block title %}<title>Title of Page</title>{% endblock %}
+    {% block title %}<title>Closings</title>{% endblock %}
 </head>
 <body>
     {% block content %}
     <h1> Future Closings Page</h1>
+
+    <p>Back to <a href="/">Home</a></p>
     {% endblock content %}
 </body>
 
