--- a/realestate_app/templates/realestate_app/base.html
+++ b/realestate_app/templates/realestate_app/base.html
@@ -1,17 +1,25 @@
 <!-- BASE HTML -->
+<!DOCTYPE html>
+<html lang="en">
 
 <p>
     <a href="{% url 'realestate_app:index' %}">Realestate App</a>  - 
     <a href="{% url 'realestate_app:contracts' %}">Contracts</a>  - 
-    <a href="{% url 'realestate_app:closings' %}">Closings</a>  - 
+    
+    <a href="{% url 'realestate_app:contractlist' %}">Contract List</a>  - 
+    
     <a href="{% url 'realestate_app:actions' %}">Contract Actions</a>  - 
     <a href="{% url 'realestate_app:persons' %}">Persons</a>  - 
     <a href="{% url 'realestate_app:new_contract' %}">Add a New Contract</a>  - 
-   
     <a href="{% url 'realestate_app:about' %}">About</a>  -
-
+    
+    
 </p>
 
 {% block content %}  
 <p>Today is {{today}}</p>
 {% endblock content %}
+
+</html>
+
+
