--- a/realestate_app/templates/realestate_app/contract.html
+++ b/realestate_app/templates/realestate_app/contract.html
@@ -4,9 +4,11 @@
 
 {% block content %}
 
-<p>ACTIONS</p>
-<P>Here is a list of all actions for all contracts: </P>
+<p>Contract:   {{  contract  }} </p>
 
+
+<P>Here is a list of all actions for this contract: </P>
+<p><a href="{% url 'realestate_app:new_action' contract.id %}"> Add a new contract action</a></p>
 <ul>
     {% for action in actions  %}
         <li>{{ action }}</li>
