--- a/realestate_app/templates/realestate_app/new_contractaction.html
+++ b/realestate_app/templates/realestate_app/new_contractaction.html
@@ -1,7 +1,5 @@
 <!-- new_contractaction.html -->
 
-<!DOCTYPE html>
-<html lang="en">
 <head>
     {% block title %}<title>New Contract Action Form</title>{% endblock %}
 </head>
@@ -11,19 +9,23 @@
   <h2>New Contract Action Form</h2>
   <p>Add new contract action:</p>
 
-  <p><a href="{% url 'realestate_app:contract' contract_id %}">{{contract}}  </a></p>
+  <p><a href="{% url 'realestate_app:contract' contract.id %}">{{contract}} </a></p> 
 
   <p>Add a new contract action:</p>
-  <form action="{% url 'realestate_app:new_action' contract_id %}" method='post' >
+  <form action="{% url 'realestate_app:new_action' contract.id %}" method='post' >
     <!-- Prevents cross-site request forgery -->
     {% csrf_token %}
     {{ form.as_p }}
     <button name="Submit">Add Contract Action</button>
   </form>
 
-  <a href="{% url 'realestate_app:new_action' contract.id %}"> Add a new contract action</a>
-
+  <p>Back to <a href="/">Home</a></p>
   {% endblock content %}
+
+
+    <!--    -->
+
+
 </body>
 
 </html>
