--- a/realestate_app/templates/realestate_app/persons.html
+++ b/realestate_app/templates/realestate_app/persons.html
@@ -4,17 +4,22 @@
 {% load static %}
 
 {% block content %}
+<head>
+    {% block title %}<title>List of Persons</title>{% endblock %}
+</head>
+
     <h1>Person List</h1>
     {% if person_list %}
     <ul>
         {% for person in person_list %}
         <li>
-            <a href ="{{ person.get_absolute_url }}">{{ person.first_name }} </a>
-            {{ person.last_name}}
+            <p>{{ person.first_name }}   {{ person.last_name}}</p>
         </li>
         {% endfor %}
     </ul>
     {% else %}
         <p>There are no people in the list.</p>
     {% endif %}
+
+    <p>Back to <a href="/">Home</a></p>
 {% endblock content %}
