--- a/realestate_app/templates/realestate_app/actions.html
+++ b/realestate_app/templates/realestate_app/actions.html
@@ -11,7 +11,7 @@
     {% for action in actions  %}
         <li>{{ action }}</li>
     {% empty %}
-        <li> No topics have been added yet.</li>
+        <li> No actions have been added yet.</li>
     {% endfor %}
 
 </ul>
